k8s-apps/argocd-extras/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - lan-web-secure
  routes:
  - match: Host(`argo.k8s.kgb33.dev`)
    kind: Rule
    priority: 10
    services:
    - name: argocd-server
      port: 443
  - match: Host(`argo.k8s.kgb33.dev`) && Headers(`Content-Type`, `application/grpc`)
    kind: Rule
    priority: 11
    services:
    - name: argocd-server
      port: 80
      scheme: h2c
  tls:
    certResolver: letsencrypt
